[gd_scene load_steps=7 format=3 uid="uid://rcuwv0xs51cb"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_2y8sd"]
[ext_resource type="Texture2D" uid="uid://c18ncwo0v7ync" path="res://Risorse/schermata iniziale.png" id="1_c5ksv"]
[ext_resource type="Texture2D" uid="uid://bjtn1yjdj2yvr" path="res://Risorse/Icone_menu/play (1).png" id="2_vc5af"]
[ext_resource type="Texture2D" uid="uid://dko58ktumfc2k" path="res://Risorse/Icone_menu/passport (1).png" id="3_gbmc5"]
[ext_resource type="Texture2D" uid="uid://d2m4oborknsse" path="res://Risorse/Icone_menu/info (1).png" id="4_orh67"]
[ext_resource type="Texture2D" uid="uid://dswkqdkvnicja" path="res://Risorse/Icone_menu/letter-x (1).png" id="5_efdai"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2y8sd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -57.0
offset_top = -19.0
offset_right = 1223.0
offset_bottom = 701.0
texture = ExtResource("1_c5ksv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -24.0
offset_right = 68.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="play" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_vc5af")

[node name="guide" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_gbmc5")

[node name="information" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_orh67")

[node name="exit" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_efdai")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 321)

[connection signal="pressed" from="VBoxContainer/HBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/guide" to="." method="_on_guide_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/information" to="." method="_on_information_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/exit" to="." method="_on_exit_pressed"]
